tests/neg/i17132.min.check
-- Error: tests/neg/i17132.min.scala:4:7 -------------------------------------------------------------------------------
4 |class Q[T <: P[Any]] extends P[R[T]] // error
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |       Recursion limit exceeded.
  |       Maybe there is an illegal cyclic reference?
  |       If that's not the case, you could also try to increase the stacksize using the -Xss JVM option.
  |       For the unprocessed stack trace, compile with -Xno-enrich-error-messages.
  |       A recurring operation is (inner to outer):
  |
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         ...
  |
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  t match ...
  |         reduce type  T match ...
